adding ammor reset

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -157,7 +157,8 @@ ActorSnapScale=0.000000
 LastLevel=/Game/InfiniteMatrix/Maps/TutorialMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/InfiniteMatrix/Blueprints/BP_Player.BP_Player
 
 [RootWindow]
 ScreenPosition=X=98.000 Y=22.000
@@ -1282,13 +1283,13 @@ SequencerAssetPicker.ThumbnailSize=2
 SequencerAssetPicker.CurrentViewType=0
 
 [ContentBrowserRecent]
-MRUItem0=/Game/InfiniteMatrix/UI/Flash
-MRUItem1=/Game/InfiniteMatrix/UI/FlashScreen
-MRUItem2=/Game/InfiniteMatrix/Blueprints/BP_Health_Pickup
-MRUItem3=/Game/InfiniteMatrix/UI/ScoreText_2
-MRUItem4=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
-MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
-MRUItem6=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem0=/Game/InfiniteMatrix/Blueprints/BP_Player
+MRUItem1=/Game/InfiniteMatrix/UI/Flash
+MRUItem2=/Game/InfiniteMatrix/UI/FlashScreen
+MRUItem3=/Game/InfiniteMatrix/Blueprints/BP_Health_Pickup
+MRUItem4=/Game/InfiniteMatrix/UI/ScoreText_2
+MRUItem5=/Game/InfiniteMatrix/Blueprints/BP_TunnelSpawner
+MRUItem6=/Game/InfiniteMatrix/Blueprints/BP_Tunnel
 MRUItem7=/Game/InfiniteMatrix/Blueprints/BP_Ammo_Pickup
 MRUItem8=/Game/InfiniteMatrix/Materials/HealthColor_2
 MRUItem9=/Game/InfiniteMatrix/Materials/Enemy_Color2
@@ -2404,8 +2405,8 @@ Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
-Widget="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
-Visual="\"Object.Content.ContentColorAndOpacity\" \"Object.Appearance.BrushColor\" "
+Widget=
+Visual=
 Object=
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.AutoReimport.AutoReimportDirectorySettings\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0]\" \"Object.AutoReimport.AutoReimportDirectorySettings.AutoReimportDirectorySettings[0].Wildcards\" \"Object.AutoSave\" \"Object.Blueprints\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
